5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1798_2572.log
== TEST (2019-06-12 12:51:22) 
-- CODE:
from numpy import*
x = array(eval(input()))
g= 0

for i in range(size(x)):
	if(x[i]%2 !=0):
		g += 1
v= zeros(g,dtype = int)
h= 0
for i in range(size(x)):
	if(x[i]%!<0):
		v[h]= x[i]
		h+=1
print(v)
-- ERROR:
File "XXXX", line 11
    if(x[i]%!<0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:52:08) 
-- CODE:
from numpy import*
x = array(eval(input()))
g= 0

for i in range(size(x)):
	if(x[i]%2 !=0):
		g += 1
v= zeros(g,dtype = int)
h= 0
for i in range(size(x)):
	if(x[i]%2!=0):
		v[h]= x[i]
		h+=1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:52:26) 
-- CODE:
from numpy import*
x = array(eval(input()))
g= 0

for i in range(size(x)):
	if(x[i]%2 !=0):
		g += 1
v= zeros(g,dtype = int)
h= 0
for i in range(size(x)):
	if(x[i]%2!=0):
		v[h]= x[i]
		h+=1
print(v)
-- EXECUTION TIME:
1.20961
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
